# Drug_Shortage_Forecaster

./: .gitignore  README.md  app.py  dashboard.html  pyproject.toml  requirements.txt
drug_shortage_forecaster/: __init__.py
drug_shortage_forecaster/alerts/: __init__.py  detector.py
drug_shortage_forecaster/data/: __init__.py  fetcher.py  processor.py
drug_shortage_forecaster/models/: __init__.py  ewma.py  historical.py  rolling_garch.py
drug_shortage_forecaster/utils/: __init__.py  metrics.py  plotting.py
scripts/: run_alert_scan.py
tests/: test_fetcher.py  test_models_and_alerts.py  test_processor.py  test_utils.py
